# docker-polyglot-world

./: .gitignore  README.md  docker-compose.yml  hello-world.json  helloworld.json  nginx.conf  polyglot-world.postman_collection.json
crystal/: crystal.Dockerfile  hello_world.cr  request_handler.cr  request_handler_spec.cr
deno/: deno.Dockerfile  main.ts
deno/src/: controller.test.ts  controller.ts  main.ts  router.ts
go/: go.Dockerfile  main.go  main_test.go
nodejs/: app.js  app.test.js  nodejs.Dockerfile  package.json  server.js  server.test.js
python/: main.py  python.Dockerfile  requirements-local.txt  requirements.txt  test_main.py
rust/: rust.Dockerfile
rust/hello-world/: Cargo.toml
rust/hello-world/src/: main.rs
rust/hello-world/tests/: main_test.rs
terraform/: Cloudflare-config.tf  main.tf  providers.tf  secret-template.tfvars  variables.tf
utilities/: use-omz.sh
