[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
gethostname = { version = "0.4.0" }
rand = "0.8.5"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hyper = "*"
remove = "0.1.3"
tokio = { version = "*", features = ["full"] }
